доделал дизайн окна связи

--- a/design.ui
+++ b/design.ui
@@ -2,214 +2,330 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1438</width>
-    <height>782</height>
+    <width>1023</width>
+    <height>505</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Монитор последовательного порта</string>
   </property>
   <property name="tabShape">
    <enum>QTabWidget::Rounded</enum>
+  </property>
+  <property name="dockOptions">
+   <set>QMainWindow::AnimatedDocks</set>
   </property>
   <property name="unifiedTitleAndToolBarOnMac">
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
-     <layout class="QVBoxLayout" name="main_layout">
-      <item>
-       <layout class="QVBoxLayout" name="output_layot">
-        <item>
-         <layout class="QHBoxLayout" name="top_outpyt_layout">
-          <item>
-           <widget class="QLineEdit" name="input_line"/>
-          </item>
-          <item>
-           <widget class="QPushButton" name="send_btn">
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>4</y>
+      <width>1017</width>
+      <height>467</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="main_layout">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetNoConstraint</enum>
+     </property>
+     <item>
+      <layout class="QVBoxLayout" name="output_layot">
+       <item>
+        <layout class="QHBoxLayout" name="top_outpyt_layout">
+         <item>
+          <widget class="QLineEdit" name="input_line"/>
+         </item>
+         <item>
+          <widget class="QComboBox" name="end_box">
+           <item>
             <property name="text">
-             <string>PushButton</string>
+             <string>-</string>
             </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <widget class="QColumnView" name="out_view">
-          <property name="textElideMode">
-           <enum>Qt::ElideNone</enum>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <layout class="QHBoxLayout" name="bottom_output_layout">
-          <item>
-           <widget class="QCheckBox" name="time_chk">
+           </item>
+           <item>
             <property name="text">
-             <string>CheckBox</string>
+             <string>\n\r</string>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="scroll_chk">
+           </item>
+           <item>
             <property name="text">
-             <string>CheckBox</string>
+             <string>\n</string>
             </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>16</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QComboBox" name="end_box"/>
-          </item>
-          <item>
-           <widget class="QPushButton" name="clear_btn">
+           </item>
+           <item>
             <property name="text">
-             <string>PushButton</string>
+             <string>\r</string>
             </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QVBoxLayout" name="pref_layout">
-        <item>
-         <widget class="QLabel" name="port_pref_label">
-          <property name="text">
-           <string>TextLabel</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <layout class="QHBoxLayout" name="port_layout">
-          <item>
-           <widget class="QLabel" name="port_switch_label">
+           </item>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="send_btn">
+           <property name="text">
+            <string>Отправить</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <widget class="QColumnView" name="columnView"/>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="bottom_output_layout">
+         <item>
+          <widget class="QCheckBox" name="time_chk">
+           <property name="text">
+            <string>Автопрокрутка</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="scroll_chk">
+           <property name="text">
+            <string>Добавлять отметки времени</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>16</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="clear_btn">
+           <property name="text">
+            <string>Очистить</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="Line" name="line">
+       <property name="lineWidth">
+        <number>10</number>
+       </property>
+       <property name="midLineWidth">
+        <number>10</number>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="pref_layout">
+       <item>
+        <widget class="QLabel" name="port_pref_label">
+         <property name="font">
+          <font>
+           <pointsize>17</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Настройки подключения</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="port_layout">
+         <item>
+          <widget class="QLabel" name="port_switch_label">
+           <property name="text">
+            <string>Порт</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="port_box"/>
+         </item>
+         <item>
+          <widget class="QLabel" name="input_sep_label">
+           <property name="text">
+            <string>Разделитель</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="input_sep_box">
+           <property name="editable">
+            <bool>true</bool>
+           </property>
+           <property name="sizeAdjustPolicy">
+            <enum>QComboBox::AdjustToContents</enum>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
+           <item>
             <property name="text">
-             <string>TextLabel</string>
+             <string>;</string>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QComboBox" name="port_box"/>
-          </item>
-          <item>
-           <widget class="QLabel" name="input_sep_label">
+           </item>
+           <item>
             <property name="text">
-             <string>TextLabel</string>
+             <string>,</string>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QComboBox" name="input_sep_box"/>
-          </item>
-          <item>
-           <widget class="QLabel" name="baudreate_label">
+           </item>
+           <item>
             <property name="text">
-             <string>TextLabel</string>
+             <string>\t</string>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QComboBox" name="baudrate_box"/>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QPushButton" name="connect_btn">
+           </item>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="baudreate_label">
+           <property name="text">
+            <string>Скорость соединения</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="baudrate_box">
+           <property name="editable">
+            <bool>false</bool>
+           </property>
+           <property name="currentIndex">
+            <number>4</number>
+           </property>
+           <property name="sizeAdjustPolicy">
+            <enum>QComboBox::AdjustToContents</enum>
+           </property>
+           <item>
             <property name="text">
-             <string>PushButton</string>
+             <string>300 бод</string>
             </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>TextLabel</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <layout class="QHBoxLayout" name="export_layout">
-          <item>
-           <widget class="QLabel" name="label_2">
+           </item>
+           <item>
             <property name="text">
-             <string>TextLabel</string>
+             <string>1200 бод</string>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QComboBox" name="comboBox"/>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer_3">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+           </item>
+           <item>
+            <property name="text">
+             <string>2400 бод</string>
             </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
+           </item>
+           <item>
+            <property name="text">
+             <string>4800 бод</string>
             </property>
-           </spacer>
-          </item>
-         </layout>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-     </layout>
-    </item>
-   </layout>
+           </item>
+           <item>
+            <property name="text">
+             <string>9600 бод</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>19200 бод</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>38400 бод</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>57600 бод</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>74880 бод</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>115200 бод</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>230400 бод</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>250000 бод</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>500000 бод</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>1000000 бод</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>2000000 бод</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="connect_btn">
+           <property name="text">
+            <string>Подключиться</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionexport_as">
