--- a/design.ui
+++ b/design.ui
@@ -77,7 +77,7 @@
             <item>
              <widget class="QComboBox" name="end_box">
               <property name="currentIndex">
-               <number>1</number>
+               <number>0</number>
               </property>
               <item>
                <property name="text">
@@ -86,7 +86,7 @@
               </item>
               <item>
                <property name="text">
-                <string>\n\r</string>
+                <string>\r\n</string>
                </property>
               </item>
               <item>
@@ -365,6 +365,11 @@
               <item>
                <property name="text">
                 <string>;</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>:</string>
                </property>
               </item>
               <item>
